# refiy-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  data.rs  error.rs  main.rs
src/api/: mod.rs  music.rs  status.rs
src/app/commands/: mod.rs
src/app/commands/configurations/: autoplay.rs  mod.rs  prefix.rs  twentyFourSeven.rs
src/app/commands/filters/: filter.rs  mod.rs
src/app/commands/informations/: about.rs  help.rs  invite.rs  leaderboard.rs  mod.rs  new.rs  nodes.rs  ping.rs  stats.rs
src/app/commands/music/: clear.rs  forward.rs  join.rs  like.rs  likedsongs.rs  loopCommand.rs  lyrics.rs  mod.rs  moveTrack.rs  nowplaying.rs  pause.rs  play.rs  previous.rs  queue.rs  recent.rs  replay.rs  resume.rs  rewind.rs  seek.rs  shuffle.rs  skip.rs  stop.rs  volume.rs
src/app/commands/playlists/: mod.rs  playlist.rs
src/client/: mod.rs
src/components/v2/: mod.rs  music.rs
src/database/: mod.rs
src/events/: guild_create.rs  guild_delete.rs  interaction_create.rs  lavalink.rs  message_create.rs  mod.rs  ready.rs  voice_state_update.rs
src/lavalink/: autoplay.rs  mod.rs
src/types/: mod.rs
src/types/core/: category.rs  configuration.rs  database.rs  keys.rs  mod.rs  options.rs
src/types/lavalink/: lyrics.rs  mod.rs  player_saver.rs
src/utils/: checks.rs  components.rs  embeds.rs  format.rs  logs.rs  mod.rs  pagination.rs  redis.rs
